--- a/web/src/app/videos/videos.component.html
+++ b/web/src/app/videos/videos.component.html
@@ -33,7 +33,7 @@
           </div>
           <div class="form-group">
             <label for="message-text" class="form-control-label">Description:</label>
-            <textarea [(ngModel)]="uploadingVideoDescription" class="form-control" id="message-text"></textarea>
+            <textarea placeholder="Video description (optional)" [(ngModel)]="uploadingVideoDescription" class="form-control" id="message-text"></textarea>
           </div>
         </div>
       </div>
